--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -16,9 +16,10 @@
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 4px;
+  margin: 20px 20px 0 20px;
 }
 
-#outer-box {
+#inner-box {
   padding: 20px;
 }
 
