--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -5,7 +5,7 @@
 }
 
 #window {
-  background: rgba(41, 46, 66, 0.7);
+  background-color: #2e3440;
   margin: auto;
   padding: 10px;
   border-radius: 0px;
@@ -14,9 +14,8 @@
 
 #input {
   padding: 10px;
-  margin-bottom: 10px;
   border-radius: 4px;
-  margin: 20px 20px 0 20px;
+  margin: 20px;
 }
 
 #inner-box {
@@ -30,10 +29,12 @@
 #entry {
   padding: 10px;
   border-radius: 4px;
+  border: 2px dashes transparent;
+  color: white;
 }
 
 #entry:selected {
-  background-color: #2e3440;
+  background-color: #888;
 }
 
 #text {
