--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -3,12 +3,24 @@
   font-family: "JetBrains Mono";
 }
 
-.main {
+.main,
+.bar {
   background: #2b2b2b;
   font-size: 14px;
   font-weight: bold;
   padding: 2px 5px;
   color: white;
+}
+
+.bar {
+  border-radius: 10px;
+  border: 2px solid #ddd;
+}
+
+.a_btn {
+  background-color: #000;
+  padding: 5px 10px;
+  border-radius: 4px;
 }
 
 .workspace-entry {
