--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -22,6 +22,11 @@
   padding: 5px 10px;
   border-radius: 4px;
 }
+.key_layout_btn {
+  background-color: #000;
+  padding: 5px 10px;
+  border-radius: 4px;
+}
 
 .workspace-entry {
   color: #ccc;
