--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -3,8 +3,7 @@
   font-family: "JetBrains Mono";
 }
 
-.main,
-.bar {
+.main {
   background: #2b2b2b;
   font-size: 14px;
   font-weight: bold;
@@ -13,8 +12,20 @@
 }
 
 .bar {
-  border-radius: 10px;
-  border: 2px solid #ddd;
+  // border-radius: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background: #2b2b2b;
+  border-left: 2px solid #ddd;
+  border-top: 2px solid #ddd;
+  border-bottom: 2px solid #ddd;
+}
+
+.bar_box {
+  padding: 10px;
+}
+.lbl {
+  font-size: 22px;
 }
 
 .a_btn {
@@ -31,7 +42,7 @@
 .workspace-entry {
   color: #ccc;
   opacity: 0.7;
-  padding:0 2.5px;
+  padding: 0 2.5px;
 }
 
 .current {
