--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -58,3 +58,18 @@
   border-radius: 100px;
   border: 1px solid skyblue;
 }
+.vol-controller {
+  transition: opacity 0.2s ease-out;
+  scale {
+    border-radius: 90px;
+    trough {
+      background-color: #666;
+      min-height: 10px;
+      border-radius: 90px;
+      highlight {
+        border-radius: 90px;
+        background: black;
+      }
+    }
+  }
+}
