fix some edge cases with eww and add volume popup

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -73,3 +73,16 @@
     }
   }
 }
+
+.sound_popup {
+  background: #2b2b2b;
+  border: 2px solid #ddd;
+  border-radius: 16px;
+}
+.icon_label {
+  border: none;
+  font-size: 100px;
+}
+.sound_label {
+  font-size: 30px;
+}
