--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -2,7 +2,8 @@
 
 * {
   all: unset;
-  font-family: "JetBrains Mono";
+  // font-family: "JetBrains Mono";
+  font-family: "Martian Mono";
 }
 
 .main {
@@ -75,15 +76,14 @@
   }
 }
 
-.sound_popup {
+.notify_popup {
   background: $flexoki-black;
   border: 2px solid $flexoki-paper;
   border-radius: 16px;
 }
-.icon_label {
-  border: none;
+.notify_icon {
   font-size: 100px;
 }
-.sound_label {
+.notify_label {
   font-size: 30px;
 }
