--- a/.config/sherlock/main.css
+++ b/.config/sherlock/main.css
@@ -1,21 +1,39 @@
 :root {
-    --background: 0, 0%, 9%;
-    --foreground: 0, 0%, 15%;
-    --text: 53, 100%, 97%;
-    --border: 0, 0%, 19%;
+  --background: 0, 0%, 9%;
+  --foreground: 0, 0%, 15%;
+  --text: 53, 100%, 97%;
+  --border: 0, 0%, 19%;
 
 
-    --tag-background: 180, 13%, 37%;
-    --tag-color: 220, 10%, 100%;
-    --error: 4, 71%, 62%;
-    --warning: 55, 100%, 68%;
-    --success: 140, 40%, 40%;
+  --tag-background: 180, 0%, 30%;
+  --tag-color: 220, 10%, 100%;
+  --error: 4, 71%, 62%;
+  --warning: 55, 100%, 68%;
+  --success: 140, 40%, 40%;
+
+  --weather-clear: linear-gradient(45deg, #87B2E0 0%, #CED9E5 50%);
+  --weather-few-clouds: linear-gradient(45deg, #A1A1A1 0%, #87B2E0 100%);
+  --weather-many-clouds: linear-gradient(45deg, #B2B2B2 0%, #C8C8C8 100%);
+  --weather-mist: linear-gradient(45deg, #878787 0%, #D1D1C7 100%);
+  --weather-showers: linear-gradient(45deg, #73848C 0%, #374B54 100%);
+  --weather-freezing-scattered-rain-storm: linear-gradient(45deg, #1A1C1F 0%, #242B35 100%);
+  --weather-freezing-scattered-rain: linear-gradient(45deg, #73848C 0%, #242B35 100%);
+  --weather-snow-scattered-day: linear-gradient(45deg, #73848C 0%, #242B35 100%);
+  --weather-storm: linear-gradient(45deg, #1A1C1F 0%, #242B35 100%);
+  --weather-snow-storm: linear-gradient(45deg, #1A1C1F 0%, #242B35 100%);
+  --weather-snow-scattered-storm: linear-gradient(45deg, #1A1C1F 0%, #242B35 100%);
+  --weather-showers-scattered: linear-gradient(45deg, #73848C 0%, #374B54 100%);
+
+  --weather-none-available: 0, 0%, 50%;
+  /* Neutral placeholder gray */
 }
+
 /*
 --warning: 36, 89%, 52%;
 --error: 0, 89%, 59%;
 --success: 102, 36%, 53%;
 */
+
 
 overshoot *,
 undershoot *,
@@ -28,342 +46,643 @@ undershoot.bottom,
 undershoot.left,
 .scroll-window>*,
 overshoot:backdrop {
-    background: none;
-    border: none;
-    background-color: transparent;
+  background: none;
+  border: none;
+  background-color: transparent;
 }
 
 * {
-    padding: 0px;
-    margin: 0px;
-    -gtk-secondary-caret-color: hsl(var(--background));
-    outline-width: 0px;
-    outline-offset: -3px;
-    outline-style: dashed;
-    line-height: 1;
+  padding: 0px;
+  margin: 0px;
+  -gtk-secondary-caret-color: hsl(var(--background));
+  outline-width: 0px;
+  outline-offset: -3px;
+  outline-style: dashed;
+  line-height: 1;
+  font-family: "Cantarell";
 }
 
-#overlay spinner{
-    color: hsl(var(--text));
+#overlay spinner {
+  color: hsl(var(--text));
 }
+
+row:selected,
 #overlay * {
-    background: transparent;
-}
-.notifications {
-    background: transparent;
+  background: transparent;
 }
 
-scrolledwindow>viewport *,
-scrolledwindow>viewport,
-window,
-box {
-    background: hsl(var(--background));
+.notifications {
+  background: transparent;
 }
+
+scrolledwindow>viewport,
+scrolledwindow>viewport>*,
+listview,
+window {
+  background: hsl(var(--background));
+}
+
 
 label {
-    color: hsl(var(--text));
+  color: hsl(var(--text));
 }
 
 
 window {
-    color: hsl(var(--text));
-    border-radius: 5px;
-    border: 2px solid hsl(var(--border));
+  color: hsl(var(--text));
+  border-radius: 5px;
+  border: 2px solid hsl(var(--border));
 }
+
+/* STATUS BAR */
+.status-bar {
+  background: hsla(var(--foreground), 0.2);
+  border-top: 1px solid hsl(var(--border));
+  padding: 4px 10px 4px 20px;
+}
+
+.status-bar label {
+  color: hsl(var(--text), 0.3);
+}
+
+.spinner-disappear {
+  animation: vanish-rotate 0.3s ease forwards;
+}
+
+.spinner-appear {
+  animation: ease-opacity 0.3s ease forwards;
+  animation: rotate 0.3s linear infinite;
+}
+
 
 /* SEARCH PAGE */
 #search-bar {
-    outline: none;
-    border: 1px solid hsla(var(--border), 1);
-    background: hsla(var(--background), 1);
-    min-height: 40px;
-    color: hsl(var(--text));
-    font-size: 15px;
-    padding-left: 20px;
+  outline: none;
+  border: none;
+  background: hsla(var(--background), 1);
+  min-height: 40px;
+  color: hsl(var(--text));
+  font-size: 15px;
+  padding-left: 20px;
 }
 
 #search-bar-holder {
-    padding: 10px 10px 0px 10px;
+  border-bottom: 2px solid hsl(var(--border));
+  padding: 5px 10px 4px 10px;
+}
+
+#search-icon-holder image {
+  transition: 0.1s ease;
+}
+
+#search-icon-holder.search image:nth-child(1) {
+  transition-delay: 0.05s;
+  opacity: 1;
+}
+
+#search-icon-holder.search image:nth-child(2) {
+  transform: rotate(-180deg);
+  opacity: 0;
+}
+
+#search-icon-holder.back image:nth-child(1) {
+  opacity: 0;
+}
+
+#search-icon-holder.back image:nth-child(2) {
+  transition-delay: 0.05s;
+  opacity: 1;
+}
+
+
+#search-icon {
+  margin-left: 10px;
 }
 
 #search-bar:focus {
-    outline: none;
+  outline: none;
 }
 
 #search-bar placeholder {
-    background: transparent;
-    background-color: transparent;
-    color: hsla(var(--text), 0.7);
-    font-weight: 500;
+  background: transparent;
+  background-color: transparent;
+  color: hsla(var(--text), 0.7);
+  font-weight: 500;
 }
 
 #category-type {
-    font-size: 13px;
-    font-weight: bold;
-    color: hsl(var(--text));
-    opacity: 0.3;
-    padding: 10px 20px 0px 20px;
+  font-size: 13px;
+  font-weight: bold;
+  color: hsl(var(--text));
+  opacity: 0.3;
+  padding: 10px 20px 0px 20px;
 }
 
 .scrolled-window {
-    padding: 10px 10px 5px 10px;
-    min-width: var(--width) * 0.8;
+  padding: 10px 10px 5px 10px;
+  min-width: var(--width) * 0.8;
 }
 
 scrollbar {
-    transform: translate(8px, 0px);
-    border: none;
-    background: none;
+  transform: translate(8px, 0px);
+  border: none;
+  background: none;
 }
 
 scrollbar slider {
-    background: hsla(var(--text), 0.1);
-    border: none;
+  background: hsla(var(--text), 0.1);
+  border: none;
 }
 
 
 image {
-    color: white;
+  color: white;
 }
 
 .tile {
-    outline: none;
-    min-height: 50px;
-    padding: 0px 10px;
-    margin-bottom: 5px;
-    border-radius: 4px;
+  outline: none;
+  min-height: 50px;
+  padding: 0px 10px;
+  margin-bottom: 5px;
+  border-radius: 4px;
 }
+
+.tile:hover *,
+.tile:hover {
+  background: transparent;
+}
+
 .tile.animate {
-    transform: translateY(20px); 
-    opacity: 0;
-    animation: fadeInUp 0.2s ease-out forwards;
+  transform: translateY(20px);
+  opacity: 0;
+  animation: fadeInUp 0.2s ease-out forwards;
 }
-.tile.animate:nth-child(1) { animation-delay: 0.05s; }
-.tile.animate:nth-child(2) { animation-delay: 0.1s; }
-.tile.animate:nth-child(3) { animation-delay: 0.15s; }
-.tile.animate:nth-child(4) { animation-delay: 0.2s; }
-.tile.animate:nth-child(5) { animation-delay: 0.25s; }
-.tile.animate:nth-child(6) { animation-delay: 0.3s; }
-.tile.animate:nth-child(7) { animation-delay: 0.35s; }
-.tile.animate:nth-child(8) { animation-delay: 0.4s; }
-.tile.animate:nth-child(9) { animation-delay: 0.45s; }
-.tile.animate:nth-child(10) { animation-delay: 0.5s; }
+
+.tile.animate:nth-child(1) {
+  animation-delay: 0.05s;
+}
+
+.tile.animate:nth-child(2) {
+  animation-delay: 0.1s;
+}
+
+.tile.animate:nth-child(3) {
+  animation-delay: 0.15s;
+}
+
+.tile.animate:nth-child(4) {
+  animation-delay: 0.2s;
+}
+
+.tile.animate:nth-child(5) {
+  animation-delay: 0.25s;
+}
+
+.tile.animate:nth-child(6) {
+  animation-delay: 0.3s;
+}
+
+.tile.animate:nth-child(7) {
+  animation-delay: 0.35s;
+}
+
+.tile.animate:nth-child(8) {
+  animation-delay: 0.4s;
+}
+
+.tile.animate:nth-child(9) {
+  animation-delay: 0.45s;
+}
+
+.tile.animate:nth-child(10) {
+  animation-delay: 0.5s;
+}
 
 @keyframes fadeInUp {
-    from {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-    to {
-        opacity: 1;
-        transform: translate(0px);
-    }
+  from {
+    letter-spacing: 1px;
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  to {
+    letter-spacing: 0px;
+    opacity: 1;
+    transform: translate(0px);
+  }
 }
 
 .tile #title {
-    font-size: 15px;
-    color: hsl(var(--text));
+  font-size: 15px;
+  color: hsl(var(--text));
 }
 
 .tile #icon {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
-#color-icon-holder{
-    border-radius: 50px;
-}
-
-.tile:selected,
-.tile:selected * {
-    transition: 0.1s ease;
-    background: hsla(var(--foreground), 1);
-    background-color: hsla(var(--foreground), 1);
-    outline: none;
-    border: none;
+row:selected .tile {
+  background: hsla(var(--foreground), 1);
+  background-color: hsla(var(--foreground), 1);
+  outline: none;
+  border: none;
 }
 
 .tile:selected .tag,
 .tag {
-    font-size: 11px;
-    border-radius: 3px;
-    padding: 2px 8px;
-    color: hsl(var(--tag-color));
+  font-size: 11px;
+  border-radius: 3px;
+  padding: 2px 8px;
+  color: hsl(var(--tag-color));
+  box-shadow: 0px 0px 10px 0px rgba(2, 2, 2, 0.4);
+  border: 1px solid hsla(var(--text), 0.1);
+  margin-left: 7px;
 }
 
 .tile:selected .tag-start,
 .tag-start {
-    background: hsla(var(--tag-background), 0.7);
+  background: hsla(var(--tag-background), 0.7);
 }
 
 .tile:selected .tag-end,
 .tag-end {
-    background: hsla(var(--success), 1);
+  background: hsla(var(--success), 1);
 }
 
 .tile:focus {
-    outline: none;
+  outline: none;
 }
 
 #launcher-type {
-    font-size: 10px;
-    color: hsla(var(--text), 0.4);
-    margin-left: 0px;
+  font-size: 10px;
+  color: hsla(var(--text), 0.4);
+  margin-left: 0px;
+}
+
+#color-icon-holder {
+  border-radius: 50px;
 }
 
 
 /*SHORTCUT*/
 #shortcut-holder {
-    margin-right: 25px;
-    padding: 5px 10px;
-    background: hsla(var(--foreground), 0.5);
-    border-radius: 5px;
+  margin-right: 25px;
+  padding: 5px 10px;
+  background: hsla(var(--foreground), 0.5);
+  border-radius: 5px;
+  border: 1px solid hsla(var(--text), 0.1);
+  box-shadow: 0px 0px 6px 0px rgba(15, 15, 15, 1);
 }
 
 .tile:selected #shortcut-holder {
-    background: hsla(var(--background), 0.5);
-    background-color: hsla(var(--background), 0.5);
-    color: hsla(var(--text), 0.5);
+  background: hsla(var(--background), 0.5);
+  background-color: hsla(var(--background), 0.5);
+  color: hsla(var(--text), 0.5);
+  box-shadow: 0px 0px 6px 0px rgba(22, 22, 22, 1);
 }
 
-#shortcut {
-    background: hsla(var(--background), 0);
-    background-color: hsla(var(--background), 0);
-    font-size: 11px;
-    font-weight: bold;
-    color: hsla(var(--text), 0.5);
+#shortcut,
+#shortcut-modkey {
+  background: hsla(var(--background), 0);
+  background-color: hsla(var(--background), 0);
+  font-size: 11px;
+  font-weight: bold;
+  color: hsla(var(--text), 0.5);
 }
+
+#shortcut-modkey {
+  font-size: 13px;
+}
+
 
 /*CALCULATOR*/
 .calc-tile {
-    padding: 10px 10px 20px 10px;
-    border-radius: 5px;
+  padding: 10px 10px 20px 10px;
+  border-radius: 5px;
 }
 
 #calc-tile-quation {
-    font-size: 10px;
-    color: gray;
+  font-size: 10px;
+  color: gray;
 }
 
 #calc-tile-result {
-    font-size: 25px;
-    color: gray;
+  font-size: 25px;
+  color: gray;
 }
 
 /*EVENT TILE*/
 .tile.tile.event-tile {
-    padding: 10px;
-}
-.tile.event-tile #time-label{
-    font-size: 3rem;
+  padding: 5px 10px;
 }
 
+.tile.event-tile #title-label {
+  padding: 2px 0px 7px 5px;
+  text-transform: capitalize;
+}
+
+.tile.event-tile #time-label {
+  font-size: 3rem;
+}
+
+#end-time-label {
+  color: gray;
+}
 
 
 
 
 /* BULK TEXT TILE */
 .bulk-text {
-    padding-bottom: 10px;
-    min-height: 50px;
+  padding-bottom: 10px;
+  min-height: 50px;
 }
 
 
 #bulk-text-title {
-    margin-left: 10px;
-    padding: 10px 0px;
-    font-size: 10px;
-    color: gray;
+  margin-left: 10px;
+  padding: 10px 0px;
+  font-size: 10px;
+  color: gray;
 }
 
 #bulk-text-content-title {
-    font-size: 17px;
-    font-weight: bold;
-    color: hsl(var(--text));
-    min-height: 20px;
+  font-size: 17px;
+  font-weight: bold;
+  color: hsl(var(--text));
+  min-height: 20px;
 }
 
 #bulk-text-content-body {
-    font-size: 14px;
-    color: hsl(var(--text));
-    line-height: 1.4;
-    min-height: 20px;
+  font-size: 14px;
+  color: hsl(var(--text));
+  line-height: 1.4;
+  min-height: 20px;
 }
+
+
+
+/* MPRIS TILE*/
+#mpris-icon-holder {
+  border-radius: 5px;
+}
+
+/*Animation for replacing album covers*/
+.image-replace-overlay #album-cover {
+  opacity: 1;
+  animation: ease-opacity 0.5s forwards;
+}
+
+
+
+
+
+
 
 /* NEXT PAGE */
 .next_tile {
-    color: hsl(var(--text));
-    background: hsl(var(--background));
+  color: hsl(var(--text));
+  background: hsl(var(--background));
 }
+
 .next_tile #content-body {
-    background: hsl(var(--background));
-    padding: 10px;
-    color: hsl(var(--text));
+  background: hsl(var(--background));
+  padding: 10px;
+  color: hsl(var(--text));
 }
-.raw_text .next_tile #content-body {
-    font-family: 'Fira Code', monospace;
-    font-feature-settings: "kern" off;
-    font-kerning: None;
+
+.raw_text,
+.next_tile #content-body {
+  font-family: 'Fira Code', monospace;
+  font-feature-settings: "kern" off;
+  font-kerning: None;
 }
+
 
 /*Error*/
 .error-tile #scroll-window {
-    padding: 10px;
-    min-height: 50px;
+  padding: 10px;
+  min-height: 50px;
 }
 
 .error-tile {
-    border-radius: 4px;
-    padding: 5px 10px 10px 10px;
-    color: white;
-    border: 1px solid transparent;
-    margin-bottom: 10px;
+  border-radius: 4px;
+  padding: 5px 10px 10px 10px;
+  color: white;
+  border: 1px solid transparent;
+  margin-bottom: 10px;
 }
 
 .error-tile * {
-    background: transparent;
+  background: transparent;
 }
 
 .error {
-    border: 1px solid hsla(var(--error), 0.5);
-    background: hsla(var(--error), 0.1);
+  border: 1px solid hsla(var(--error), 0.5);
+  background: hsla(var(--error), 0.1);
 }
 
 .warning {
-    border: 1px solid hsla(var(--warning), 0.5);
-    background: hsla(var(--warning), 0.1);
+  border: 1px solid hsla(var(--warning), 0.5);
+  background: hsla(var(--warning), 0.1);
 }
 
 .error-tile #title {
-    padding: 10px;
-    font-size: 10px;
-    color: gray;
+  padding: 10px;
+  font-size: 10px;
+  color: gray;
 }
 
 .error-tile #content-title {
-    margin-left: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    color: hsl(var(--text));
+  margin-left: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  color: hsl(var(--text));
 }
 
 .error-tile #content-body {
-    margin-left: 10px;
-    font-size: 14px;
-    color: hsl(var(--text));
-    line-height: 1.4;
-    color: gray;
+  margin-left: 10px;
+  font-size: 14px;
+  color: hsl(var(--text));
+  line-height: 1.4;
+  color: gray;
+}
+
+
+/* STATUS BAR */
+.status-bar {
+  background: hsla(var(--foreground), 0.2);
+  border-top: 1px solid hsl(var(--border));
+  padding: 4px 10px 4px 20px;
+}
+
+.status-bar label {
+  color: hsl(var(--text), 0.3);
+}
+
+
+@keyframes slide {
+  from {
+    transform: translate(0px, 0px);
+  }
+
+  to {
+    transform: translate(-20px, 0px);
+  }
+}
+
+/* WEATHER TILE */
+.weather-tile {
+  padding: 0px 20px 0px 10px;
+  background: darkgray;
+  margin-bottom: 10px;
+}
+
+.tile.weather-tile #content-holder {
+  opacity: 0;
+}
+
+.tile.weather-tile.weather-animate #content-holder {
+  animation: ease-opacity 0.3s forwards;
+  transition: background 0.3s ease;
+  opacity: 1;
+}
+
+.tile.weather-tile.weather-no-animate #content-holder {
+  opacity: 1;
+}
+
+.tile.weather-tile #location {
+  margin-left: 5px;
+  padding: 10px 0px;
+  font-size: 10px;
+}
+
+.tile.weather-tile #temperature {
+  font-size: 30px;
+}
+
+.tile.weather-tile #content-holder {
+  margin-bottom: 15px;
 }
 
 
 
 
-@keyframes slide {
-    from {
-        transform: translate(0px, 0px);
-    }
 
-    to {
-        transform: translate(-20px, 0px);
-    }
+
+/*WEATHER CLASSES*/
+.tile.weather-tile label {
+  color: hsl(var(--text));
+}
+
+.tile.weather-tile.weather-clear {
+  background: var(--weather-clear);
+  /* Light sky blue */
+}
+
+.tile.weather-tile.weather-few-clouds {
+  background: var(--weather-few-clouds);
+  /* Very light */
+}
+
+.tile.weather-tile.weather-many-clouds {
+  background: var(--weather-many-clouds);
+  /* Medium-light */
+}
+
+.tile.weather-tile.weather-mist {
+  background: var(--weather-mist);
+  /* Light beige */
+}
+
+.tile.weather-tile.weather-showers {
+  background: var(--weather-showers);
+  /* Medium-dark blue */
+}
+
+.tile.weather-tile.weather-freezing-scattered-rain-storm {
+  background: var(--weather-freezing-scattered-rain-storm);
+}
+
+.tile.weather-tile.weather-freezing-scattered-rain {
+  background: var(--weather-freezing-scattered-rain);
+}
+
+.tile.weather-tile.weather-snow-scattered-day {
+  background: var(--weather-snow-scattered-day);
+}
+
+.tile.weather-tile.weather-storm {
+  background: var(--weather-storm);
+  /* Very dark */
+}
+
+.tile.weather-tile.weather-snow-storm {
+  background: var(--weather-snow-storm);
+  /* Light */
+}
+
+.tile.weather-tile.weather-snow-scattered-storm {
+  background: var(--weather-snow-scattered-storm);
+  /* Still light */
+}
+
+.tile.weather-tile.weather-showers-scattered {
+  background: var(--weather-showers-scattered);
+}
+
+.tile.weather-tile.weather-none-available {
+  background: hsl(var(--weather-none-available));
+  /* Neutral gray */
+}
+
+
+
+/*ANIMATIONS*/
+@keyframes vanish-rotate {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+    transform: rotate(360deg);
+  }
+
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+    --start-rotation: 0deg;
+  }
+
+  to {
+    transform: rotate(360deg);
+    --start-rotation: 360deg;
+  }
+
+}
+
+@keyframes ease-opacity {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+
+}
+
+@keyframes slide {
+  from {
+    transform: translate(0px, 0px);
+  }
+
+  to {
+    transform: translate(-20px, 0px);
+  }
 }
