--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -2,8 +2,7 @@
 
 * {
   all: unset;
-  // font-family: "JetBrains Mono";
-  font-family: "Martian Mono";
+  font-family: "JetBrains Mono Nerd Font";
 }
 
 .main {
