--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -2,7 +2,7 @@
 
 * {
   all: unset;
-  font-family: "JetBrains Mono Nerd Font";
+  font-family: "JetBrains Mono Nerd Font Propo";
 }
 
 .main {
@@ -36,7 +36,7 @@
 }
 .key_layout_btn {
   background-color: $flexoki-black;
-  padding: 0px 10px;
+  // padding: 0px 10px;
   border-radius: 2px;
 }
 
