--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -110,3 +110,13 @@ menu {
     color: $flexoki-black;
   }
 }
+
+.on {
+  color: #52b670;
+}
+.off {
+  color: #808080;
+}
+.paused {
+  color: #ffa500;
+}
